cluster/apps/homebox/homebox/homebox.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: homebox
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: homebox
  template:
    metadata:
      labels:
        app: homebox
    spec:
      containers:
        - name: homebox
          image: ghcr.io/sysadminsmedia/homebox:0.24.2-rootless@sha256:22a7246fd304ae65df25abbc531b36bb231f36916cc9504f909877d03ae40839
          ports:
            - containerPort: 7745
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homebox-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: homebox
  namespace: homebox
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 7745
      port: 7745
      protocol: TCP
  selector:
    app: homebox
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebox
  namespace: homebox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: homebox.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebox
                port:
                  number: 7745
  tls:
    - hosts:
        - homebox.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: homebox-tls
